unpackaged/main/default/objects/OrderApi__Custom_Payment_Type_Template__mdt/OrderApi__Custom_Payment_Type_Template__mdt.object-meta.xml
<CustomObject>
    <description>Configurations for custom payment types available for stores.</description>
    <label>Custom Payment Type Template</label>
    <pluralLabel>Custom Payment Type Templates</pluralLabel>
</CustomObject>