unpackaged/main/default/objects/OrderApi__Custom_Payment_Type_Template__mdt/fields/OrderApi__Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Apex_Class__c</fullName>
    <description>Apex Class to drive multiple display features of custom payment types.</description>
    <inlineHelpText>Apex Class to drive multiple display features of custom payment types.</inlineHelpText>
    <label>Apex Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>