unpackaged/main/default/objects/OrderApi__Custom_Payment_Type_Template__mdt/fields/OrderApi__Auto_Post_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Auto_Post_Sales_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, Sales Orders will be posted prior to receiving payment. Usually occurs when payments take several days to process. When unchecked Sales Orders will post once payments are received.</description>
    <inlineHelpText>When checked, Sales Orders will be posted prior to receiving payment. Usually occurs when payments take several days to process. When unchecked Sales Orders will post once payments are received.</inlineHelpText>
    <label>Auto Post Sales Order</label>
    <type>Checkbox</type>
</CustomField>