unpackaged/main/default/objects/OrderApi__Custom_Payment_Type_Template__mdt/fields/OrderApi__Available_for_Recurring_Payments__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Available_for_Recurring_Payments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, payment methods will be available for recurring payments.</description>
    <inlineHelpText>When checked, payment methods will be available for recurring payments.</inlineHelpText>
    <label>Available for Recurring Payments</label>
    <type>Checkbox</type>
</CustomField>