unpackaged/main/default/objects/OrderApi__Custom_Payment_Type_Template__mdt/fields/OrderApi__Is_Enabled__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the metadata record is enabled or not.</description>
    <inlineHelpText>Whether the metadata record is enabled or not.</inlineHelpText>
    <label>Is Enabled</label>
    <type>Checkbox</type>
</CustomField>