unpackaged/main/default/objects/OrderApi__Custom_Payment_Type_Template__mdt/fields/OrderApi__Lightning_Component_for_Checkout__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Lightning_Component_for_Checkout__c</fullName>
    <description>Defines the lightning component to be used in checkout pages.</description>
    <inlineHelpText>Defines the lightning component to be used in checkout pages.</inlineHelpText>
    <label>Lightning Component for Checkout</label>
    <length>255</length>
    <type>Text</type>
</CustomField>