unpackaged/main/default/objects/OrderApi__Custom_Payment_Type_Template__mdt/fields/OrderApi__Lightning_Component_for_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Lightning_Component_for_Payment_Method__c</fullName>
    <description>Defines the lightning component to be used in the Payment Method page for the front and backend.</description>
    <inlineHelpText>Defines the lightning component to be used in the Payment Method page for the front and backend.</inlineHelpText>
    <label>Lightning Component for Payment Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>