unpackaged/main/default/objects/OrderApi__Custom_Payment_Type_Template__mdt/fields/OrderApi__Payment_Gateway_Config_JSON__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Payment_Gateway_Config_JSON__c</fullName>
    <description>A JSON document defining the payment gateway object associated with this payment type</description>
    <inlineHelpText>A JSON document defining the payment gateway object associated with this payment type</inlineHelpText>
    <label>Payment Gateway JSON Configuration</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>