unpackaged/main/default/objects/OrderApi__Custom_Payment_Type_Template__mdt/fields/OrderApi__Supports_Multiple_Order_Payments__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Supports_Multiple_Order_Payments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the related custom payment type allows the users to pay multiple orders.</description>
    <inlineHelpText>When checked, the related custom payment type allows the users to pay multiple orders.</inlineHelpText>
    <label>Supports Multiple Order Payments</label>
    <type>Checkbox</type>
</CustomField>